# HandDetector

./: CMakeLists.txt  Circle.cpp  Circle.h  HandDetection.cpp  HandDetection.h  Line.cpp  Line.h  Main.cpp  MaskManager.cpp  MaskManager.h  README.md  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  Triangle.cpp  Triangle.h
